indus/test/test_examples/type_errors/dict2.tpc
control dict<(bit<32>,bit<16>),bool> x;
init {
   bit<32> lu1 = 0;
   bool lu2 = 1;
   bool y = x[(lu1,lu2)];
} 
telemetry {} 
check {}